--- a/css/base.css
+++ b/css/base.css
@@ -1,13 +1,13 @@
-/* player when in theater mode */
-
-ytd-watch-flexy[theater]:not([fullscreen]) ytd-player {
-    height: calc(100% - 10px);
-}
-
 /* side menu */
 
 #contentContainer.tp-yt-app-drawer[swipe-open].tp-yt-app-drawer::after {
     display: none;
+}
+
+/* hd icon */
+
+.ytp-cairo-refresh .ytp-settings-button.ytp-hd-quality-badge::after, .ytp-cairo-refresh .ytp-settings-button.ytp-hdr-quality-badge::after, .ytp-cairo-refresh .ytp-settings-button.ytp-4k-quality-badge::after, .ytp-cairo-refresh .ytp-settings-button.ytp-5k-quality-badge::after, .ytp-cairo-refresh .ytp-settings-button.ytp-8k-quality-badge::after, .ytp-cairo-refresh .ytp-settings-button.ytp-3d-badge-grey::after, .ytp-cairo-refresh .ytp-settings-button.ytp-3d-badge::after {
+    background-color: rgb(200, 0, 0) !important;
 }
 
 /* spinner */
