fixed 2012 and 2013 volime slider ::after

--- a/css/2012.css
+++ b/css/2012.css
@@ -464,6 +464,10 @@
     height: 4px !important;
 }
 
+.ytp-big-mode .ytp-volume-slider-handle::after {
+	left: 0px;
+}
+
 /* ################################# */
 
 /* RIGHT BUTTONS */
