just some extra things

--- a/css/2006.css
+++ b/css/2006.css
@@ -337,10 +337,16 @@
 /* MUTE */
 .ytp-button.ytp-mute-button[title="Unmute (m)"] {
 	background: url('chrome-extension://__MSG_@@extension_id__/img/2006/volume-button-mute.png') !important;
+    background-position: center center !important;
+	background-repeat: no-repeat !important;
+	background-size: 20px !important;
 }
 
 .ytp-button.ytp-mute-button[data-title-no-tooltip="Unmute"]:hover {
-	background: url('chrome-extension://__MSG_@@extension_id__/img/2006/volume-button.png');
+	background: url('chrome-extension://__MSG_@@extension_id__/img/2006/volume-button.png') !important;
+    background-position: center center !important;
+	background-repeat: no-repeat !important;
+	background-size: 20px !important;
 }
 
 /* ################################# */
