--- a/css/2010.css
+++ b/css/2010.css
@@ -1,6 +1,7 @@
 /* PLAYER BASE */
 
 :root {
+	--pt-progress-bar-unfocused-height: 5px;
 	--pt-progress-bar-full-height: 10px;
 	--pt-setting-after-label: #b91f1f;
 }
@@ -28,7 +29,7 @@
 .ytp-chrome-bottom .ytp-progress-bar-container {
 	width: 100% !important;
 	bottom: 34px !important;
-	height: 11px;
+	height: var(--pt-progress-bar-unfocused-height);
 	border-top: 1px solid var(--pt-progress-bar-outline);
 	border-bottom: 1px solid var(--pt-progress-bar-outline);
 }
@@ -44,11 +45,19 @@
 .ytp-chrome-bottom .ytp-progress-bar {
 	transition: .5s;
 	margin-bottom: -0.5px !important;
-	height: var(--pt-progress-bar-full-height) !important;
 }
 
-.ytp-chrome-bottom .ytp-progress-bar:hover {
+.ytp-chrome-bottom .ytp-progress-bar:hover,
+.html5-video-player[pt-video-hover="true"] .ytp-chrome-bottom .ytp-progress-bar-container,
+.html5-video-player[pt-video-hover="true"] .ytp-chrome-bottom .ytp-progress-bar
+{
+	height: var(--pt-progress-bar-full-height);
 	margin-bottom: 1px !important;
+}
+
+.ytp-progress-list {
+	background: var(--pt-progress-bar-bg) !important;
+	transform: scaleY(1);
 }
 
 /* this is only used in embeds & fullscreen */
@@ -104,6 +113,7 @@
 
 .ytp-progress-list {
 	background: var(--pt-progress-bar-bg) !important;
+	transform: scaleY(1) !important;
 }
 
 .ytp-timed-markers-container {
@@ -140,6 +150,11 @@
     bottom: -45px;
 }
 
+.ytp-autohide:not(.ytp-watch-controls)[pt-video-hover="true"] .ytp-progress-bar-container,
+.ytp-autohide:not(.ytp-watch-controls)[pt-video-hover="true"] .ytp-progress-bar {
+	height: var(--pt-progress-bar-unfocused-height) !important;
+}
+
 .ytp-big-mode.ytp-autohide:not(.ytp-watch-controls) .ytp-chrome-bottom, .ytp-big-mode .ytp-chrome-bottom[aria-hidden=true] {
     opacity: 1 !important;
     bottom: -41px;
@@ -170,8 +185,22 @@
 /* SCRUBBER */
 
 .ytp-scrubber-container {
-	top: 1px !important;
+	width: 0px;
+	height: 0px;
+	top: 5px;
+	left: 0px;
 	margin-top: -5px;
+	justify-items: center;
+	overflow: hidden;
+	transition: width .5s, height .5s, top .5s, left .5s !important;
+}
+
+.ytp-progress-bar:hover .ytp-scrubber-container,
+.html5-video-player[pt-video-hover="true"] .ytp-scrubber-container
+{
+	width: 18px;
+	height: 18px;
+	top: 1px;
 }
 
 .ytp-autohide:not(.ytp-watch-controls) .ytp-scrubber-button {
