--- a/css/2013.css
+++ b/css/2013.css
@@ -1,6 +1,7 @@
 /* PLAYER BASE */
 
 :root {
+	--pt-progress-bar-unfocused-height: 3px;
 	--pt-progress-bar-full-height: 10px;
 	--pt-setting-after-label: #b91f1f;
 }
@@ -25,6 +26,7 @@
 .ytp-chrome-bottom .ytp-progress-bar-container {
 	width: 100% !important;
 	bottom: 32px !important;
+	height: var(--pt-progress-bar-unfocused-height);
 }
 
 .ytp-chrome-bottom .ytp-chapters-container {
@@ -80,16 +82,20 @@
 	bottom: 0 !important;
 }
 
-.ytp-progress-bar {
+.ytp-chrome-bottom .ytp-progress-bar {
 	transition: .5s;
 }
 
-.ytp-progress-bar:hover {
+.ytp-chrome-bottom .ytp-progress-bar:hover,
+.html5-video-player[pt-video-hover="true"] .ytp-chrome-bottom .ytp-progress-bar-container,
+.html5-video-player[pt-video-hover="true"] .ytp-chrome-bottom .ytp-progress-bar
+{
 	height: var(--pt-progress-bar-full-height);
 }
 
 .ytp-progress-list {
 	background: var(--pt-progress-bar-bg) !important;
+	transform: scaleY(1);
 }
 
 .ytp-timed-markers-container {
@@ -129,6 +135,11 @@
 .ytp-autohide:not(.ytp-watch-controls) .ytp-chrome-bottom, .ytp-chrome-bottom[aria-hidden=true] {
     opacity: 1 !important;
     bottom: -40px;
+}
+
+.ytp-autohide:not(.ytp-watch-controls)[pt-video-hover="true"] .ytp-progress-bar-container,
+.ytp-autohide:not(.ytp-watch-controls)[pt-video-hover="true"] .ytp-progress-bar {
+	height: var(--pt-progress-bar-unfocused-height) !important;
 }
 
 .ytp-big-mode.ytp-autohide:not(.ytp-watch-controls) .ytp-chrome-bottom, .ytp-big-mode .ytp-chrome-bottom[aria-hidden=true] {
@@ -179,9 +190,23 @@
 }
 
 .ytp-scrubber-container {
-	top: 1px !important;
-    left: -15px !important;
-    margin-top: -5px;
+	width: 0px;
+	height: 0px;
+	top: 5px;
+	left: 0px;
+	margin-top: -5px;
+	justify-items: center;
+	overflow: hidden;
+	transition: width .5s, height .5s, top .5s, left .5s !important;
+}
+
+.ytp-progress-bar:hover .ytp-scrubber-container,
+.html5-video-player[pt-video-hover="true"] .ytp-scrubber-container
+{
+	width: 18px;
+	height: 18px;
+	top: 1px;
+	left: -15px;
 }
 
 .ytp-big-mode .ytp-scrubber-button {
