--- a/css/2012.css
+++ b/css/2012.css
@@ -856,12 +856,20 @@
 
 /* 3rd-party extensions */
 
-.ytp-autohide .ytp-chrome-bottom #previewbar {
-	top: -8px;
+.ytp-chrome-bottom[data-pt-fakebar] #previewbar {
+	top: 1px;
 }
 
-.ytp-big-mode.ytp-autohide .ytp-chrome-bottom #previewbar {
-    top: -10px;
+.ytp-big-mode .ytp-chrome-bottom[data-pt-fakebar] #previewbar {
+	top: 0;
+}
+
+.ytp-autohide .ytp-chrome-bottom[data-pt-fakebar] #previewbar {
+	top: -6px;
+}
+
+.ytp-big-mode.ytp-autohide .ytp-chrome-bottom[data-pt-fakebar] #previewbar {
+    top: -9px;
 }
 
 /* ################################# */
