--- a/css/2006.css
+++ b/css/2006.css
@@ -21,7 +21,7 @@
 	background: none !important;
 }
 
-.html5-video-player .ytp-chrome-bottom {
+#movie_player.html5-video-player .ytp-chrome-bottom {
 	height: 30px !important;
 	width: 100% !important;
     left: 0 !important;
@@ -39,7 +39,7 @@
 
 /* PROGRESS BAR */
 
-.ytp-chrome-bottom .ytp-progress-bar-container {
+#movie_player .ytp-chrome-bottom .ytp-progress-bar-container {
 	bottom: 34px !important;
 	height: 11px;
     top: 10px;
