--- a/css/2012.css
+++ b/css/2012.css
@@ -25,7 +25,7 @@
 	background: none !important;
 }
 
-.html5-video-player .ytp-chrome-bottom {
+#movie_player.html5-video-player .ytp-chrome-bottom {
 	height: 32px !important;
 	width: 100% !important;
     left: 0 !important;
@@ -33,7 +33,7 @@
 
 /* PROGRESS BAR */
 
-.ytp-chrome-bottom .ytp-progress-bar-container {
+#movie_player .ytp-chrome-bottom .ytp-progress-bar-container {
 	width: 100% !important;
 	border-bottom: 1px solid #181818;
 	bottom: 32px !important;
@@ -392,7 +392,7 @@
 
 /* TIME DISPLAY */
 
-.ytp-chrome-bottom .ytp-time-display {
+#movie_player .ytp-chrome-bottom .ytp-time-display {
 	line-height: 47px !important;
 	padding: 0px 10px;
 	margin-top: -8px;
