--- a/css/2013.css
+++ b/css/2013.css
@@ -15,7 +15,7 @@
 	background: none !important;
 }
 
-.html5-video-player .ytp-chrome-bottom {
+#movie_player.html5-video-player .ytp-chrome-bottom {
 	height: 32px !important;
 	width: 100% !important;
     left: 0 !important;
@@ -23,7 +23,7 @@
 
 /* PROGRESS BAR */
 
-.ytp-chrome-bottom .ytp-progress-bar-container {
+#movie_player .ytp-chrome-bottom .ytp-progress-bar-container {
 	width: 100% !important;
 	bottom: 32px !important;
 	height: var(--pt-progress-bar-unfocused-height);
@@ -294,7 +294,7 @@
 
 /* TIME DISPLAY */
 
-.ytp-chrome-bottom .ytp-time-display {
+#movie_player .ytp-chrome-bottom .ytp-time-display {
 	line-height: 47px !important;
     padding: 0px 10px;
     margin-top: -7px;
