--- a/css/3rd-party-style.css
+++ b/css/3rd-party-style.css
@@ -12,6 +12,10 @@ on the GitHUb repo! Much thanks! */
     transform: scale(1) !important;
 }
 
+#movie_player:not(.ytp-delhi-modern) .ytp-progress-bar-container {
+    bottom: inherit !important;
+}
+
 /* SponsorBlock */
 #previewbar {
     top: 0px;
@@ -66,10 +70,6 @@ This extension for some reason likes to
 resize the player when not in theater mode,
 the following lines of code should fix this.
 */
-ytd-app #movie_player[aria-label="YouTube Video Player"] .ytp-chrome-bottom {
-    width: 100% !important;
-}
-/* For the same extension; why CustomTube. */
 html[disable-flexy-player="true"]:not([static]):not([pseudo-static]) ytd-watch-flexy:not([theater]):not([fullscreen]):not([no-top-margin]):not([reduced-top-margin]) #movie_player.html5-video-player[aria-label="YouTube Video Player"] .ytp-chrome-bottom {
     width: 100% !important;
 }
