still working on layering changes

--- a/css/2006.css
+++ b/css/2006.css
@@ -135,7 +135,7 @@
 }
 
 .ytp-play-progress.ytp-swatch-background-color, .ytp-hover-progress.ytp-hover-progress-light {
-	background: var(--pt-main-colour);
+	background: var(--pt-main-colour) !important;
 }
 
 .iv-branding .branding-context-container-inner {
@@ -599,7 +599,7 @@
 	margin-top: -5px;
 }
 
-.ytp-scrubber-button {
+.ytp-swatch-background-color.ytp-scrubber-button {
     background: url(chrome-extension://__MSG_@@extension_id__/img/2006-scrubber.png) !important;
     background-position: 0px 0px !important;
     background-size: 16px !important;
@@ -612,7 +612,7 @@
     transform: scale(1) !important;
 }
 
-.ytp-scrubber-button:hover {
+.ytp-swatch-background-color.ytp-scrubber-button:hover {
 	background: url(chrome-extension://__MSG_@@extension_id__/img/2006-scrubber-hover.png) !important;
 	background-position: 0px 0px !important;
     background-size: 16px !important;
@@ -624,7 +624,7 @@
     transform: scale(0) !important;
 }
 
-.ytp-scrubber-button.ytp-swatch-background-color {
+.ytp-swatch-background-color.ytp-scrubber-button.ytp-swatch-background-color {
 	background-color: transparent !important;
 }
 
