--- a/css/2010.css
+++ b/css/2010.css
@@ -125,7 +125,7 @@
 }
 
 .ytp-play-progress.ytp-swatch-background-color, .ytp-hover-progress.ytp-hover-progress-light {
-	background: var(--pt-main-colour);
+	background: var(--pt-main-colour) !important;
 }
 
 .iv-branding .branding-context-container-inner {
@@ -207,7 +207,7 @@
     transform: scale(0) !important;
 }
 
-.ytp-scrubber-button.ytp-swatch-background-color {
+.ytp-swatch-background-color.ytp-scrubber-button.ytp-swatch-background-color {
 	background-color: transparent !important;
 }
 
