--- a/css/2013.css
+++ b/css/2013.css
@@ -112,7 +112,7 @@
 }
 
 .ytp-play-progress.ytp-swatch-background-color, .ytp-hover-progress.ytp-hover-progress-light, .ytp-hover-progress-light {
-	background: var(--pt-main-colour);
+	background: var(--pt-main-colour) !important;
 }
 
 .iv-branding .branding-context-container-inner {
@@ -167,7 +167,7 @@
 
 /* SCRUBBER */
 
-.ytp-scrubber-button {
+.ytp-swatch-background-color.ytp-scrubber-button {
 	background: url(chrome-extension://__MSG_@@extension_id__/img/2013-scrubber.png) !important;
 	background-position: 0px 0px !important;
 	background-size: 18px !important;
@@ -177,7 +177,7 @@
 	position: relative;
 }
 
-.ytp-scrubber-button:hover {
+.ytp-swatch-background-color.ytp-scrubber-button:hover {
 	background: url(chrome-extension://__MSG_@@extension_id__/img/2013-scrubber-hover.png) !important;
 	background-position: 0px 0px !important;
 	background-size: 18px !important;
@@ -185,7 +185,7 @@
 	width: 18px !important;
 }
 
-.ytp-scrubber-button.ytp-swatch-background-color {
+.ytp-swatch-background-color.ytp-scrubber-button.ytp-swatch-background-color {
 	background-color: transparent !important;
 }
 
